src/test/resources/parse/reject/assignmentToFalse.ul
boolean bar ()
{
    false = 5;
}
